# EmailEssence.github.io

./: .gitignore  404.html  CNAME  README.md  docker-compose.yml  index.html  package-lock.json  pyproject.toml  requirements.txt
.vite/: results.json
assets/: index--NXaSvQS.css  index--lLMFRF7.css  index-1sMT-V3E.js  index-79FwXbRa.js  index-B03rljdE.js  index-B2_YqCRt.css  (+51 more)
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  config.py  conftest.py  database.py  main.py  openapi.yaml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  setup-ci.bat  setup-ci.sh  setup.bat  setup.ps1  setup.sh
backend/app/: .coverage  dependencies.py  main.py
backend/app/models/: __init__.py  auth_models.py  email_model.py  email_models.py  settings_models.py  summary_model.py  summary_models.py  user_model.py  user_models.py
backend/app/routers/: __init__.py  auth_router.py  emails_router.py  summaries_router.py  user_router.py
backend/app/services/: __init__.py  auth_service.py  database_service.py  email_service.py  summarization_service.py  summary_service.py  user_service.py
backend/app/services/database/: README.md  __init__.py  base_repository.py  connection.py  email_repository.py  factories.py  interfaces.py  mongodb_service.py  summary_repository.py  token_repository.py  user_repository.py
backend/app/services/database/repositories/: base_repository.py  email_repository.py  summary_repository.py  token_repository.py  user_repository.py
backend/app/services/summarization/: __init__.py  base.py  prompts.py  summary_service.py  types.py
backend/app/services/summarization/providers/: openai.py
backend/app/services/summarization/providers/google/: google.py  prompts.py
backend/app/services/summarization/providers/openai/: openai.py  prompts.py
backend/app/services/summarization/providers/openrouter/: openrouter.py  prompts.py
backend/app/tests/: .env.test.example  conftest.py  constants.py  database_mock.py  test_config.py  testing.md
backend/app/tests/api/: conftest.py
backend/app/tests/api/v1/: conftest.py  constants.py  test_email_routes.py
backend/app/tests/unit/db/: test_base_repository.py  test_email_repository.py  test_summary_repository.py  test_token_repository.py  test_user_repository.py
backend/app/tests/unit/email/: conftest.py  test_db_operations.py  test_email_parser.py  test_email_service.py  test_imap_client.py
backend/app/tests/unit/summary/: test_openrouter_provider.py
backend/app/utils/: config.py  helpers.py
docs/: x.puml  (+7 more)
(+170 files in other folders)
